# coalescence-with-ml

./: .gitignore  README.md  make_figures.py  pyproject.toml  report.ipynb  requirements.txt
configs/: facilitate_global_particle.yaml  facilitate_global_particle_action.yaml  facilitate_local_action.yaml  suppress_global_particle.yaml  suppress_global_particle_action.yaml  suppress_local_action.yaml
models/: global_particle_action_facilitate_L15.pth  global_particle_action_suppress_L50.pth  global_particle_facilitate_L15.pth  global_particle_suppress_L50.pth  local_action_facilitate_r5.pth  local_action_suppress_r1.pth  local_action_suppress_r3.pth  local_action_suppress_r5.pth
results/hyperparameters/: reward_per_training_batch_size_128.txt  reward_per_training_batch_size_16.txt  reward_per_training_batch_size_32.txt  reward_per_training_batch_size_4.txt  reward_per_training_batch_size_64.txt  reward_per_training_capacity_100.txt  reward_per_training_capacity_1000.txt  reward_per_training_capacity_10000.txt  reward_per_training_capacity_100000.txt  reward_per_training_capacity_1000000.txt  reward_per_training_discount_0.8.txt  reward_per_training_discount_0.9.txt  reward_per_training_discount_0.99.txt  reward_per_training_discount_0.txt  reward_per_training_hidden_layer_size_128.txt  reward_per_training_hidden_layer_size_16.txt  reward_per_training_hidden_layer_size_256.txt  reward_per_training_hidden_layer_size_32.txt  reward_per_training_hidden_layer_size_4.txt  reward_per_training_hidden_layer_size_512.txt  reward_per_training_hidden_layer_size_updated_128.txt  (+18 more)
(+42 files in other folders)
