[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coalescence"
version = "1.0.0"
description = "Controlling coalescing random walks with deep reinforcement learning"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jonas Braun" }]
dependencies = [
    "numpy>=1.23",
    "torch>=2.0",
    "matplotlib>=3.6",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
